fixed issue with collapsed menu when menu was centered

--- a/assets/styles/common/_global.scss
+++ b/assets/styles/common/_global.scss
@@ -66,7 +66,7 @@ a {
 	top:100%;
 	right:0;
 	height:79px;
-	width:200px;
+	width:131px;
 	background-color: #E3912C;
 	div {
 		position: relative;
@@ -83,7 +83,7 @@ a {
 			height:79px;
 			line-height: 79px;
 			text-align: center;
-			font-size: 200%;
+			font-size: 130%;
 			border-bottom: 4px solid #fff;
 			border-left: 4px solid #fff;
 			border-right: 4px solid #fff;
